--- a/AutoMall/ViewControllers/Login_Register/LoginViewController.xib
+++ b/AutoMall/ViewControllers/Login_Register/LoginViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="17B48" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -171,7 +171,7 @@
                     </variation>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HKd-GO-t5H">
-                    <rect key="frame" x="293" y="214" width="62" height="30"/>
+                    <rect key="frame" x="293" y="218" width="62" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="jdG-8g-liB"/>
                     </constraints>
@@ -185,7 +185,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7eN-H0-nyt">
-                    <rect key="frame" x="20" y="214" width="77" height="30"/>
+                    <rect key="frame" x="20" y="218" width="77" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="lPQ-wL-yWg"/>
                     </constraints>
@@ -199,12 +199,12 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9g7-Wu-B6y">
-                    <rect key="frame" x="20" y="164" width="335" height="40"/>
+                    <rect key="frame" x="20" y="164" width="335" height="44"/>
                     <color key="backgroundColor" red="0.91764705879999997" green="0.12941176469999999" blue="0.1764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="40" id="8P4-hr-GMG"/>
+                        <constraint firstAttribute="height" constant="44" id="8P4-hr-GMG"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                     <state key="normal" title="登录">
                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -224,7 +224,7 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="您还可以使用手机验证码登录" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wny-g0-RfX">
-                    <rect key="frame" x="101.5" y="254" width="172.5" height="21"/>
+                    <rect key="frame" x="101.5" y="258" width="172.5" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="2zk-m6-x8g"/>
                     </constraints>
@@ -243,7 +243,7 @@
                     </variation>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="thV-Sd-xAK">
-                    <rect key="frame" x="157" y="295" width="60" height="60"/>
+                    <rect key="frame" x="157" y="299" width="60" height="60"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="60" id="J7p-HH-6tf"/>
                         <constraint firstAttribute="height" constant="60" id="hb1-f7-iMw"/>
@@ -268,7 +268,7 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="验证码登录" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Xd-tX-1Q4">
-                    <rect key="frame" x="154" y="366" width="66.5" height="21"/>
+                    <rect key="frame" x="154" y="370" width="66.5" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="M5F-Ua-HfH"/>
                     </constraints>
