--- a/AutoMall/ViewControllers/Upkeep/CheckResultCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/CheckResultCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="17B48" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -58,6 +58,9 @@
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V9k-Fu-U9g">
+                        <rect key="frame" x="160" y="50.5" width="160" height="49.5"/>
+                    </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="80项" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fve-ao-k9p">
                         <rect key="frame" x="96.5" y="66" width="36" height="19.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -236,6 +239,7 @@
                     <constraint firstItem="yag-WQ-fHB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="08S-8r-9Kj"/>
                     <constraint firstItem="E3S-3A-fx9" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="0H3-nA-X71"/>
                     <constraint firstItem="x4l-on-zq1" firstAttribute="top" secondItem="CsU-Qi-TPa" secondAttribute="bottom" constant="15" id="1Id-qb-XaP"/>
+                    <constraint firstItem="V9k-Fu-U9g" firstAttribute="leading" secondItem="E3S-3A-fx9" secondAttribute="trailing" id="1Jr-Ed-ySF"/>
                     <constraint firstItem="HU7-kF-44I" firstAttribute="top" secondItem="JET-EK-To9" secondAttribute="bottom" id="1Q5-JG-qIr"/>
                     <constraint firstItem="fve-ao-k9p" firstAttribute="centerY" secondItem="ovn-Sd-guf" secondAttribute="centerY" id="37e-Jq-4CQ"/>
                     <constraint firstItem="TeX-ht-4bB" firstAttribute="top" secondItem="DKQ-E6-sxi" secondAttribute="bottom" constant="15" id="3yS-3X-Xri"/>
@@ -272,11 +276,13 @@
                     <constraint firstAttribute="trailing" secondItem="XXD-nc-bVz" secondAttribute="trailing" id="Pfr-ru-dsv"/>
                     <constraint firstItem="E3S-3A-fx9" firstAttribute="leading" secondItem="Xk7-Lb-RY1" secondAttribute="trailing" id="Q8q-WN-1H0"/>
                     <constraint firstAttribute="trailing" secondItem="yag-WQ-fHB" secondAttribute="trailing" id="RGQ-t3-CsB"/>
+                    <constraint firstItem="DKQ-E6-sxi" firstAttribute="top" secondItem="V9k-Fu-U9g" secondAttribute="bottom" id="SAL-eN-lYD"/>
                     <constraint firstItem="1nf-zt-n9M" firstAttribute="top" secondItem="JET-EK-To9" secondAttribute="bottom" id="Srl-96-M25"/>
                     <constraint firstItem="dnr-Px-Hd9" firstAttribute="leading" secondItem="uPN-FY-hcG" secondAttribute="trailing" constant="2" id="Tp4-aT-quZ"/>
                     <constraint firstItem="fve-ao-k9p" firstAttribute="leading" secondItem="ovn-Sd-guf" secondAttribute="trailing" constant="2" id="UDi-pw-EPx"/>
                     <constraint firstAttribute="trailing" secondItem="QRn-My-q2W" secondAttribute="trailing" id="UJP-R4-LFY"/>
                     <constraint firstAttribute="trailing" secondItem="JET-EK-To9" secondAttribute="trailing" id="Ujx-Em-rJK"/>
+                    <constraint firstAttribute="trailing" secondItem="V9k-Fu-U9g" secondAttribute="trailing" id="V8P-zC-FbK"/>
                     <constraint firstAttribute="bottom" secondItem="Xk7-Lb-RY1" secondAttribute="bottom" id="VoG-9t-Fzt"/>
                     <constraint firstItem="Xk7-Lb-RY1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Wye-Oa-V4q"/>
                     <constraint firstItem="YKk-CD-fWt" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="XD6-rI-hoZ"/>
@@ -286,6 +292,7 @@
                     <constraint firstItem="ovn-Sd-guf" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="1:2" constant="-10" id="Yh5-Ns-3Lf"/>
                     <constraint firstItem="CsU-Qi-TPa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="alL-gS-46M"/>
                     <constraint firstAttribute="trailing" secondItem="Irc-dN-02A" secondAttribute="trailing" id="cAp-R9-zJr"/>
+                    <constraint firstItem="V9k-Fu-U9g" firstAttribute="top" secondItem="XXD-nc-bVz" secondAttribute="bottom" id="cGr-Zh-z9H"/>
                     <constraint firstItem="vj3-Pd-rzN" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="1:2" constant="-10" id="cag-jH-5bg"/>
                     <constraint firstItem="XXD-nc-bVz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="cdn-0c-OnL"/>
                     <constraint firstItem="fBc-72-6KF" firstAttribute="centerY" secondItem="2r0-ms-FUA" secondAttribute="centerY" id="d4Q-6d-bZS"/>
@@ -339,9 +346,10 @@
                 <outlet property="underpanBtn" destination="HU7-kF-44I" id="NFu-QF-272"/>
                 <outlet property="underpanCenterCon" destination="OQb-ii-fvg" id="zQQ-oB-I8l"/>
                 <outlet property="underpanNumL" destination="fBc-72-6KF" id="8TT-Dm-OIS"/>
+                <outlet property="unnormalBtn" destination="V9k-Fu-U9g" id="IVC-md-lrA"/>
                 <outlet property="unusualNumL" destination="h2f-l1-4u7" id="p5R-cJ-RV6"/>
             </connections>
-            <point key="canvasLocation" x="-410" y="-352.5"/>
+            <point key="canvasLocation" x="-710" y="-392"/>
         </tableViewCell>
     </objects>
     <resources>
