--- a/AutoMall/ViewControllers/PersonalCenter/HeadNameCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/HeadNameCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="17B48" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderPictureSquare" translatesAutoresizingMaskIntoConstraints="NO" id="4EI-uQ-Kdu" customClass="WPImageView">
@@ -71,10 +71,10 @@
                         </state>
                     </button>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrows" translatesAutoresizingMaskIntoConstraints="NO" id="nuc-l9-QZX">
-                        <rect key="frame" x="158" y="16.5" width="8" height="13"/>
+                        <rect key="frame" x="158" y="17.5" width="6" height="11"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="13" id="MoP-B9-8Rc"/>
-                            <constraint firstAttribute="width" constant="8" id="lf9-ix-zTr"/>
+                            <constraint firstAttribute="height" constant="11" id="MoP-B9-8Rc"/>
+                            <constraint firstAttribute="width" constant="6" id="lf9-ix-zTr"/>
                         </constraints>
                     </imageView>
                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="登录" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IWA-yT-KfU">
@@ -109,13 +109,14 @@
             <connections>
                 <outlet property="accountBtn" destination="gbz-tC-hl3" id="3Aw-ec-W5o"/>
                 <outlet property="applyBtn" destination="cpc-Qw-hH1" id="xcF-vo-rms"/>
+                <outlet property="arrowsIM" destination="nuc-l9-QZX" id="AhH-4G-83O"/>
                 <outlet property="headIMG" destination="4EI-uQ-Kdu" id="Lgb-Xl-WHU"/>
                 <outlet property="jifenL" destination="vHE-Dm-wg9" id="L7V-Ra-thx"/>
                 <outlet property="loginL" destination="IWA-yT-KfU" id="5nk-BD-o8M"/>
                 <outlet property="shopLevelIM" destination="kXB-f4-Q3E" id="4D7-e0-XvH"/>
                 <outlet property="shopNameBtn" destination="Caf-U9-tpv" id="WEF-q5-8wy"/>
             </connections>
-            <point key="canvasLocation" x="-342" y="-127"/>
+            <point key="canvasLocation" x="-499" y="-169"/>
         </tableViewCell>
     </objects>
     <resources>
