--- a/AutoMall/ViewControllers/Upkeep/ResultCheckContentDetailCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/ResultCheckContentDetailCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="17B48" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -15,17 +15,17 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6sM-TC-f1i">
-                        <rect key="frame" x="22" y="22" width="0.0" height="0.0"/>
+                        <rect key="frame" x="18" y="22" width="0.0" height="0.0"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MQC-Kd-0YE">
-                        <rect key="frame" x="33.5" y="22" width="0.0" height="0.0"/>
+                        <rect key="frame" x="29.5" y="22" width="0.0" height="0.0"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -52,7 +52,7 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="6sM-TC-f1i" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="22" id="3ud-8v-JhG"/>
+                    <constraint firstItem="6sM-TC-f1i" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="18" id="3ud-8v-JhG"/>
                     <constraint firstAttribute="trailing" secondItem="3RM-3u-v7v" secondAttribute="trailing" constant="8" id="61i-Y2-snw"/>
                     <constraint firstItem="3RM-3u-v7v" firstAttribute="leading" secondItem="YLe-2d-4RG" secondAttribute="trailing" constant="8" id="FE8-y3-HH5"/>
                     <constraint firstItem="YLe-2d-4RG" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="NMF-gh-ml8"/>
@@ -68,7 +68,7 @@
                 <outlet property="photoBtn" destination="3RM-3u-v7v" id="00Q-fc-gYC"/>
                 <outlet property="resultL" destination="MQC-Kd-0YE" id="UY8-1t-eQl"/>
             </connections>
-            <point key="canvasLocation" x="-363" y="-9"/>
+            <point key="canvasLocation" x="-107" y="-18"/>
         </tableViewCell>
     </objects>
     <resources>
