--- a/AutoMall/ViewControllers/Upkeep/ResultDetailHazardCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/ResultDetailHazardCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="17B48" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -15,11 +15,11 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="142"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="142"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="141.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="潜在问题与危害" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f7V-bg-5nN">
-                        <rect key="frame" x="16" y="8" width="296" height="125.5"/>
+                        <rect key="frame" x="18" y="8" width="284" height="125.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -27,15 +27,15 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="f7V-bg-5nN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="Ayx-UD-jCx"/>
-                    <constraint firstItem="f7V-bg-5nN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="KOx-pY-ihE"/>
+                    <constraint firstItem="f7V-bg-5nN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="18" id="KOx-pY-ihE"/>
                     <constraint firstAttribute="bottom" secondItem="f7V-bg-5nN" secondAttribute="bottom" constant="8" id="Uji-aH-HXi"/>
-                    <constraint firstAttribute="trailing" secondItem="f7V-bg-5nN" secondAttribute="trailing" constant="8" id="abm-8s-Q1w"/>
+                    <constraint firstAttribute="trailing" secondItem="f7V-bg-5nN" secondAttribute="trailing" constant="18" id="abm-8s-Q1w"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="hazardContentL" destination="f7V-bg-5nN" id="agB-37-nv8"/>
             </connections>
-            <point key="canvasLocation" x="-406" y="40"/>
+            <point key="canvasLocation" x="-42" y="40"/>
         </tableViewCell>
     </objects>
 </document>
